remove debug parameter

--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
     "support": {
         "docs": "https://github.com/seven-io/monolog",
         "email": "support@seven.io",
-        "rss": "https://www.sms77.io/en/feed/",
+        "rss": "https://www.seven.io/en/feed/",
         "source": "https://github.com/seven-io/monolog"
     }
 }
